# video_server

./: Cargo.toml  README.md  readme.md
src/: main.rs  run.rs
src/rest/: mod.rs  run.rs
src/rest/functions/: download.rs
src/rest/routes/: routes.rs
src/utils/: addr.rs  constraints.rs  mod.rs
