[package]
name = "video_server"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.29", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
futures-channel = "0.3"
async-recursion = "1.0"
anyhow = "1.0"

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tower-http = { version = "0.6.2", features = ["cors"] }
axum = "0.8"
tracing-subscriber = "0.3"
mime_guess = "2.0"
grpc_video_server = { git = "https://github.com/blackshadow-software/grpc_video_server" }
axum-server = { version = "0.7", features = ["tls-rustls"] }
